# DV2597-Assignment2

./: .gitignore  CMakeLists.txt  oddevensort.cu  oddevensort.cuh  oddevensortmain.cu
